Move homepage slideshow images to The Grid

--- a/frontend/app/views/fragments/media/slideshowItem.scala.html
+++ b/frontend/app/views/fragments/media/slideshowItem.scala.html
@@ -11,5 +11,5 @@
         </div>
         <h2 class="slideshow__description">@description</h2>
     </figcaption>
-    <div class="js-image-slideshow" data-src="@Asset.at(imgSrc)" data-alt="@description" data-class="responsive-img slideshow__image"></div>
+    <div data-src="@imgSrc" data-alt="@description" data-class="responsive-img slideshow__image" class="js-image-slideshow"></div>
 </figure>
