--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -4,18 +4,12 @@
 
     @* ===== Slideshow ===== *@
     <section class="slideshow js-slideshow" data-slideshow-duration="5000">
-        @fragments.media.slideshowItem("images/noAssetHash/slideshow/hero/man_aud_{width}{pixel_ratio}.jpg",
-            "Guardian Live with Russell Brand", true)
-        @fragments.media.slideshowItem("images/noAssetHash/slideshow/hero/pussy_riot_{width}{pixel_ratio}.jpg",
-            "Guardian Live event: Pussy Riot - art, sex and disobedience")
-        @fragments.media.slideshowItem("images/noAssetHash/slideshow/hero/jim_page_{width}{pixel_ratio}.jpg",
-            "A life in music: Jimmy Page")
-        @fragments.media.slideshowItem("images/noAssetHash/slideshow/hero/women_{width}{pixel_ratio}.jpg",
-            "Guardian Live event: Russell Brand")
-        @fragments.media.slideshowItem("images/noAssetHash/slideshow/hero/tin_temp_{width}{pixel_ratio}.jpg",
-            "Observer Ideas - Stories that inspire: Tinie Tempah")
-        @fragments.media.slideshowItem("images/noAssetHash/slideshow/hero/viv_west_{width}{pixel_ratio}.jpg",
-            "Guardian Live event: Vivienne Westwood")
+        @fragments.media.slideshowItem("https://media.guim.co.uk/eab86e9c81414932e0d50a1cd609dccfc20ca5d2/0_0_2279_1368/{width}.jpg", "Guardian Live event: Pussy Riot - art, sex and disobedience")
+        @fragments.media.slideshowItem("https://media.guim.co.uk/da867c363957d748bd04cfd9d4890033203a58c6/0_0_2279_1368/{width}.jpg", "Guardian Live with Russell Brand", true)
+        @fragments.media.slideshowItem("https://media.guim.co.uk/733834b0b9f84e4367cf676919008bfd88007f25/0_0_2279_1368/{width}.jpg", "A life in music: Jimmy Page")
+        @fragments.media.slideshowItem("https://media.guim.co.uk/e736acb945406974844bea77ca49b2c1e450013e/0_0_2279_1368/{width}.jpg", "Guardian Live event: Russell Brand")
+        @fragments.media.slideshowItem("https://media.guim.co.uk/1e687530a52ef14cd9c1eacb1e8757600c382f86/0_0_2279_1368/{width}.jpg", "Observer Ideas - Stories that inspire: Tinie Tempah")
+        @fragments.media.slideshowItem("https://media.guim.co.uk/85d46476d07fb744327c60a4c5117a7ddc2796d0/0_0_2279_1368/{width}.jpg", "Guardian Live event: Vivienne Westwood")
     </section>
 
     @* ===== Introduction ===== *@
