Don't use imager for homepage feature boxes, removes noAssetHash

--- a/frontend/app/views/fragments/page/featurePanel.scala.html
+++ b/frontend/app/views/fragments/page/featurePanel.scala.html
@@ -5,7 +5,7 @@
 <div class="feature-panel">
     <a class="feature-panel__cta" href="@anchorHref">
         <div class="feature-panel__media">
-            <div class="js-image-feature" data-src="@Asset.at(imgSrc)" data-alt="@description" data-class="responsive-img"></div>
+            <img src="@Asset.at(imgSrc)" alt="@description" class="responsive-img" />
         </div>
         <h3 class="feature-panel__description">@description</h3>
     </a>
