--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -23,20 +23,16 @@
         <div class="section-features">
             <ul class="grid grid--bordered grid--4up">
                 <li class="grid__item">
-                    @fragments.page.featurePanel("images/noAssetHash/slideshow/promo/whats-included-{width}{pixel_ratio}.jpg",
-                        "Discover what's included with Guardian Membership", "/about")
+                    @fragments.page.featurePanel("images/promo/promo-benefits.jpg", "Discover what's included with Guardian Membership", "/about")
                 </li>
                 <li class="grid__item">
-                    @fragments.page.featurePanel("images/noAssetHash/slideshow/promo/events-{width}{pixel_ratio}.jpg",
-                        "Browse our events and book your tickets now", "/events")
+                    @fragments.page.featurePanel("images/promo/promo-events.jpg", "Browse our events and book your tickets now", "/events")
                 </li>
                 <li class="grid__item">
-                    @fragments.page.featurePanel("images/noAssetHash/slideshow/promo/compare-tiers-{width}{pixel_ratio}.jpg",
-                        "Compare the three tiers of Guardian Membership", "/join")
+                    @fragments.page.featurePanel("images/promo/promo-compare.jpg", "Compare the three tiers of Guardian Membership", "/join")
                 </li>
                 <li class="grid__item">
-                    @fragments.page.featurePanel("images/noAssetHash/slideshow/promo/become-patron-{width}{pixel_ratio}.jpg",
-                        "Become a Patron and support the Guardian's future", "/patrons")
+                    @fragments.page.featurePanel("images/promo/promo-patron.jpg", "Become a Patron and support the Guardian's future", "/patrons")
                 </li>
             </ul>
         </div>
