Choose tier - Design refinements

--- a/frontend/app/views/fragments/tier/packagePromo.scala.html
+++ b/frontend/app/views/fragments/tier/packagePromo.scala.html
@@ -12,7 +12,7 @@
         <div class="package__description copy hidden-tablet">
             <p>@Benefits.details(tier).desc</p>
             @if(descriptionAnchor) {
-                <p><a href="@descriptionAnchor">What's included</a></p>
+                <p class="text-caption tablet-only"><a href="@descriptionAnchor">What's included</a></p>
             }
         </div>
         <div class="package__actions">
