--- a/frontend/assets/stylesheets/base/_lists.scss
+++ b/frontend/assets/stylesheets/base/_lists.scss
@@ -49,7 +49,7 @@ nav ol {
     margin: 0;
     list-style: none;
     li {
-        border-bottom: 1px dotted $c-border-brand;
+        border-bottom: 1px dotted $c-border-neutral;
         padding-bottom: rem($gs-baseline / 2);
         margin-bottom: rem($gs-baseline / 2);
     }
