--- a/frontend/assets/stylesheets/components/_tier.scss
+++ b/frontend/assets/stylesheets/components/_tier.scss
@@ -111,6 +111,7 @@
     .tier-header-promo__pricing {
         border: solid $c-border-neutral;
         border-width: 0;
+        margin-top: -(rem($gs-baseline / 2));
     }
     @include mq(tablet) {
         .tier-header-promo__title {
