--- a/frontend/assets/stylesheets/state/_responsive.scss
+++ b/frontend/assets/stylesheets/state/_responsive.scss
@@ -31,6 +31,15 @@
     }
 }
 
+.tablet-only {
+    @include mq($until: tablet) {
+        display: none !important;
+    }
+    @include mq($from: desktop) {
+        display: none !important;
+    }
+}
+
 .mobile-portrait-only {
     @include mq(mobileLandscape) {
         display: none !important;
