--- a/frontend/assets/stylesheets/components/_modal.scss
+++ b/frontend/assets/stylesheets/components/_modal.scss
@@ -3,7 +3,7 @@
 }
 
 .modal {
-    @include box-shadow(0 rem(1px 1px) 9999999px rgba(0, 0, 0, .45));
+    @include box-shadow(0 1px 1px 9999999px rgba(0, 0, 0, .45));
     position: absolute;
     left: 0;
     top: 0;
