--- a/frontend/assets/stylesheets/layout/_footer.scss
+++ b/frontend/assets/stylesheets/layout/_footer.scss
@@ -53,7 +53,7 @@
 .l-footer__misc {
     padding-top: rem($gs-baseline / 2);
     padding-bottom: rem($gs-baseline * 1.5);
-    border-top: rem(1px) solid $c-neutral4;
+    border-top: 1px solid $c-neutral4;
 }
 
 .guardian-logo-footer {
