--- a/frontend/assets/stylesheets/layout/_homeslice.scss
+++ b/frontend/assets/stylesheets/layout/_homeslice.scss
@@ -458,7 +458,7 @@
 .join-today__join-box {
     position: relative;
     background-color: $c-neutral9;
-    border: rem(1px) solid $c-neutral5;
+    border: 1px solid $c-neutral5;
     margin-bottom: rem($gs-gutter);
     padding: rem(68px) rem($gs-gutter / 2) rem($gs-gutter / 2);
 
