--- a/frontend/assets/stylesheets/pages/_login.scss
+++ b/frontend/assets/stylesheets/pages/_login.scss
@@ -64,7 +64,7 @@
         .signin__login,
         .signin__register {
             padding: rem(3px) 0 rem($gs-baseline * 2);
-            border-top: rem(1px) solid $c-neutral3;
+            border-top: 1px solid $c-neutral3;
         }
     }
 }
