--- a/frontend/assets/stylesheets/_extends-only.scss
+++ b/frontend/assets/stylesheets/_extends-only.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     width: rem(36px);
     height: rem(36px);
-    border: rem(1px) solid $black;
+    border: 1px solid $black;
     padding: 0;
     margin: 0;
     @include border-radius(50%);
