--- a/frontend/assets/stylesheets/base/_forms.scss
+++ b/frontend/assets/stylesheets/base/_forms.scss
@@ -19,7 +19,7 @@
             position: static;
             float: right;
             display: block;
-            border-top: rem(1px) solid $c-neutral3;
+            border-top: 1px solid $c-neutral3;
             width: rem(gs-span(2) + $gs-gutter);
         }
 
@@ -84,7 +84,7 @@
 
 .fieldset {
     border: 0;
-    border-top: rem(1px) solid $c-neutral3;
+    border-top: 1px solid $c-neutral3;
     display: table;
     padding: rem($gs-baseline / 2) rem($gs-gutter / 2);
     margin: 0;
@@ -118,7 +118,7 @@
 }
 
 .fieldset--top-border {
-    border-top: rem(1px) solid $c-neutral3;
+    border-top: 1px solid $c-neutral3;
 }
 
 .fieldset__heading {
@@ -265,7 +265,7 @@
 
 .text-input,
 .textarea {
-    border: rem(1px) solid $c-neutral4;
+    border: 1px solid $c-neutral4;
     @include box-shadow(none);
     @include box-sizing(border-box);
     color: $c-body;
