--- a/frontend/assets/stylesheets/components/_content.scss
+++ b/frontend/assets/stylesheets/components/_content.scss
@@ -37,18 +37,18 @@
     max-width: rem(gs-span(8));
 
     .content__headline {
-        border-top: rem(1px) solid $c-newsAccent;
+        border-top: 1px solid $c-newsAccent;
         margin-bottom: rem($gs-baseline);
         padding-top: rem($gs-baseline / 2 - 1px);
     }
 }
 
 .content__container--border {
-    border-top: rem(1px) dotted $c-neutral5;
+    border-top: 1px dotted $c-neutral5;
 }
 
 .content__container--border-dark {
-    border-top: rem(1px) dotted #333333;
+    border-top: 1px dotted #333333;
 }
 
 .content__footer {
