--- a/frontend/assets/stylesheets/components/nav/_nav.scss
+++ b/frontend/assets/stylesheets/components/nav/_nav.scss
@@ -170,7 +170,7 @@ $_global-nav-height: 36px;
     }
     .nav__link {
         @include fs-bodyHeading(1);
-        border-top: rem(1px) solid $mem-blue-border;
+        border-top: 1px solid $mem-blue-border;
         display: block;
         background-color: transparent;
         -webkit-font-smoothing: subpixel-antialiased;
