--- a/frontend/assets/stylesheets/components/nav/_pop-up.scss
+++ b/frontend/assets/stylesheets/components/nav/_pop-up.scss
@@ -30,7 +30,7 @@
         width: rem(gs-span(4) + $gs-gutter * 2);
         @include box-sizing(border-box);
         background-color: $white;
-        border: rem(1px) solid $c-neutral4;
+        border: 1px solid $c-neutral4;
 
         .nav__link {
             padding: rem(10px) 0;
@@ -104,7 +104,7 @@
 
             .nav__link {
                 border-top: 0;
-                border-bottom: rem(1px) solid $c-neutral7;
+                border-bottom: 1px solid $c-neutral7;
                 padding-left: 0;
                 margin: 0 rem($gs-gutter / 2);
 
