--- a/frontend/assets/stylesheets/pages/_events-detail.scss
+++ b/frontend/assets/stylesheets/pages/_events-detail.scss
@@ -337,7 +337,7 @@
 
 .event__social-header {
     @include fs-textSans(1);
-    border-top: rem(1px) solid $c-neutral6;
+    border-top: 1px solid $c-neutral6;
     padding-bottom: rem($gs-baseline / 2);
     padding-top: rem(3px);
 }
