--- a/frontend/assets/stylesheets/pages/_login.scss
+++ b/frontend/assets/stylesheets/pages/_login.scss
@@ -2,7 +2,7 @@
    Login
    ========================================================================== */
 
-.section-signin,
+// TODO: Can be deleted once form refactoring is completed
 .section-payment {
     background-color: $white;
     margin: 0 auto;
