--- a/frontend/app/views/patterns/patterns.scala.html
+++ b/frontend/app/views/patterns/patterns.scala.html
@@ -350,9 +350,7 @@
     }
 
     @pattern("Package - Feature") {
-        @fragments.tier.packageFeature(Tier.Patron, "All Partner benefits, plus") {
-            <a class="action u-no-margin" href="#">Become a Patron</a>
-        }
+        @fragments.tier.packageFeature(Tier.Patron)
     }
 
     @pattern("Package - Stack") {
