--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -7,7 +7,7 @@
     <div class="event-item__container">
         <div class="event-item__media">
             <a href="/event/@event.id" itemprop="image" content="@event.socialImgUrl">
-                <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="@event.name.text" data-class="responsive-img"></div>
+                <div class="imager-loaded-image" data-src="@event.imgUrl" data-available-widths="@event.availableWidths" data-alt="@event.name.text" data-class="responsive-img"></div>
             </a>
         </div>
         <div class="event-item__meta">
