Update event listing design

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -14,7 +14,7 @@
         "masterclasses"
     )
 
-    <div class="event-filters tone-masterclasses--border">
+    <div class="event-filters">
         <div class="event-filters__container">
 
             <div class="event-filters__categories">
