--- a/frontend/app/views/fragments/event/headerBar.scala.html
+++ b/frontend/app/views/fragments/event/headerBar.scala.html
@@ -2,5 +2,5 @@
 
 <section class="header-bar@if(category){ tone-@category--trans}">
     <h1 class="header-bar__title">@title</h1>
-    <i class="event-logo@if(category){ icon-@category}"></i>
+    <i class="header-bar__logo@if(category){ icon-@category}"></i>
 </section>
