--- a/frontend/assets/stylesheets/components/_event-items.scss
+++ b/frontend/assets/stylesheets/components/_event-items.scss
@@ -180,9 +180,9 @@
    ========================================================================== */
 
 .event-item--hero {
-    margin-bottom: $gutter-width-fluid;
     width: 100%;
     height: auto;
+    margin-bottom: rem($gs-baseline);
 
     .event-item__container {
         @include clearfix;
