--- a/frontend/assets/stylesheets/components/_packages.scss
+++ b/frontend/assets/stylesheets/components/_packages.scss
@@ -281,6 +281,9 @@
         }
     }
 }
+.package--promo--reversed {
+    background-color: $white;
+}
 
 /* ==========================================================================
    Package Feauture
