--- a/frontend/assets/stylesheets/components/_event-detail.scss
+++ b/frontend/assets/stylesheets/components/_event-detail.scss
@@ -110,6 +110,24 @@
     }
 }
 
+.event-logo {
+    position: absolute;
+    bottom: rem($gs-gutter / 2);
+    right: rem($gs-gutter / 2);
+
+    height: rem(44px);
+    background-position: right;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    @include mq(tablet) {
+        bottom: rem($gs-gutter);
+        right: rem($gs-gutter);
+        height: rem(87px);
+    }
+}
+
+
 /* ==========================================================================
    Event Ticket
    ========================================================================== */
