--- a/frontend/assets/stylesheets/components/_event-listings.scss
+++ b/frontend/assets/stylesheets/components/_event-listings.scss
@@ -11,51 +11,44 @@
     padding-left: rem($gs-gutter / 2);
     padding-right: rem($gs-gutter / 2);
 
-    .header-bar__title {
-        @include fs-headline(4);
-        padding: rem($gs-gutter / 2) 0 rem(55px);
-        max-width: rem(gs-span(8));
-    }
-
     @include mq(tablet) {
         min-height: rem(132px);
         padding-left: rem($gs-gutter);
-
-        .header-bar__title {
-            @include fs-headline(6);
-            padding: rem($gs-gutter) 0;
-        }
     }
 
     @include mq(mem-full) {
         padding-left: rem(gs-span(2) + $gs-gutter * 2); // 180
-        .header-bar__title {
+    }
+}
+    .header-bar__title {
+        @include fs-headline(4);
+        padding: rem($gs-gutter / 2) 0 rem($gs-baseline);
+        max-width: rem(gs-span(8));
+
+        @include mq(tablet) {
+            @include fs-headline(6);
+        }
+
+        @include mq(mem-full) {
             @include fs-headline(7);
         }
     }
-}
+    .header-bar__logo {
+        position: absolute;
+        right: rem($gs-gutter / 2);
+        bottom: rem($gs-gutter / 2);
 
-/* ==========================================================================
-   Event Listings - Event Logo
-   ========================================================================== */
-// TODO: Document usage of event-logo
+        height: rem(44px);
+        background-position: right;
+        background-size: contain;
+        background-repeat: no-repeat;
 
-.event-logo {
-    position: absolute;
-    bottom: rem($gs-gutter / 2);
-    right: rem($gs-gutter / 2);
-
-    height: rem(44px);
-    background-position: right;
-    background-size: contain;
-    background-repeat: no-repeat;
-
-    @include mq(tablet) {
-        bottom: rem($gs-gutter);
-        right: rem($gs-gutter);
-        height: rem(87px);
+        @include mq(tablet) {
+            right: rem($gs-gutter);
+            bottom: rem($gs-baseline);
+            height: rem(87px);
+        }
     }
-}
 
 /* ==========================================================================
    Event Listings - Event blocks (sections)
