--- a/frontend/assets/stylesheets/components/_grid.scss
+++ b/frontend/assets/stylesheets/components/_grid.scss
@@ -47,13 +47,24 @@
             float: left;
             margin-left: $gutter-width-fluid / 2;
             padding-left: $gutter-width-fluid / 2;
-            margin-bottom: $gutter-width-fluid;
+            margin-bottom: rem($gs-baseline);
             width: 50% - ($gutter-width-fluid / 2);
             &:nth-of-type(2n+1) { clear: left; }
         }
         @include mq(tablet) {
             border-style: solid;
             border-width: 0 0 0 1px;
+        }
+    }
+}
+
+/* Grid 2up
+   ========================================================================== */
+
+.grid--2up {
+    .grid__item {
+        @include mq(tablet) {
+            &:nth-of-type(2n+1) { border-left: none; }
         }
     }
 }
@@ -86,7 +97,7 @@
             border-width: 0 0 0 1px;
             margin-left: $gutter-width-fluid / 2;
             padding-left: $gutter-width-fluid / 2;
-            margin-bottom: $gutter-width-fluid;
+            margin-bottom: rem($gs-baseline);
             width: 33.3% - ($gutter-width-fluid / 2);
             &:nth-of-type(3n+1) { clear: left; border-left: none; }
         }
