Created a fragment for event image and used in all the places where the code was duplicated.

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -107,7 +107,7 @@
             case _: MasterclassEvent => {}
             case _ => {
                 <div class="event-content__image" itemprop="image" content="@event.socialImgUrl">
-                    <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="Please upload an event image" data-class="responsive-img"></div>
+                    @fragments.event.image(event)
                 </div>
             }
         }
