--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -15,7 +15,7 @@
 
         <div class="event-summary">
             <div class="event-item__media">
-                <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="@event.name.text" data-class="responsive-img"></div>
+                @fragments.event.image(event)
             </div><div class="event-item__meta">
                 <h2 class="event-item__title">
                     @event.name.text
